Navigator tool: fix Z slider hiding if image data set has only one section
This was broken in the sense that an empty space was created when hiding
the slider before. This space is now collapsed.

--- a/django/applications/catmaid/static/css/toolbar.css
+++ b/django/applications/catmaid/static/css/toolbar.css
@@ -47,10 +47,6 @@ div.toolbar .toolbar_slider_item .hSliderView .hSliderBarBottom {
   min-width: 0;
 }
 
-div.toolbar #sliders_box {
-  min-width: 15em;
-}
-
 div.toolbar #zoom_level_box {
   min-width: 14em;
 }
